--- a/TMS/TMS/Views/KnowledgeBase/Index.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Index.cshtml
@@ -180,7 +180,7 @@
         <div class="questions col-md-10">
             <div class="header-content col-md-12">
                 <div class="col-md-6">
-                    <a class="btn btn-default" data-toggle="modal" data-target="#CreateNew">New solution</a>
+                    <a class="btn btn-default" href="/KnowledgeBase/CreateKB">New solution</a>
                     <a class="btn btn-default" href="#"><i class="fa fa-trash"></i></a>
                 </div>
                 <div class="box-tools pull-right col-md-4">
